tests/passing/function_empty.tails
func foo() -> unit:
  pass

func tests() -> unit:
  discard foo()
