tests/failing/declare_function_redefine.tails
func tests() -> unit:
  pass

func tests() -> unit:
  pass
